added pickle functionality

--- a/lyric_generation.ipynb
+++ b/lyric_generation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -426,19 +426,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "\n"
+    "import cPickle as pickle\n",
+    "\n",
+    "pickle.dump( hiphop_gen_lines, open( \"hiphop.gen\", \"wb\" ) )\n",
+    "pickle.dump( pop_gen_lines, open( \"pop.gen\", \"wb\" ) )\n",
+    "pickle.dump( country_gen_lines, open( \"country.gen\", \"wb\" ) )\n",
+    "pickle.dump( metal_gen_lines, open( \"metal.gen\", \"wb\" ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -447,7 +451,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my wife but this MF rookie (yup) \n",
+      "doors holding it hot \n",
       "\n"
      ]
     }
@@ -459,12 +463,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import cPickle as pickle\n",
+    "\n",
+    "def get_lyrics(genre):\n",
+    "    ignore = [\"\\xc3\",\"\\x8e\",\"\\xc2\",\"\\xa4\",\"\\xad\",\"\\x8f\",\"\\x81\",\"\\xbc\",\"\\xb1\",\"\\xb7\",\"\\xb3\",\"\\xac\",\"\\x80\",\"\\xbd\",\"\\xb6\",\"\\xb5\",\"\\xb9\",\"\\x82\"]\n",
+    "    \n",
+    "    if genre == \"pop\":\n",
+    "        generator = pickle.load( open( \"pop.gen\", \"rb\" ))\n",
+    "    elif genre == \"hiphop\":\n",
+    "        generator = pickle.load( open( \"hiphop.gen\", \"rb\" ))\n",
+    "    elif genre == \"metal\":\n",
+    "        generator = pickle.load( open( \"metal.gen\", \"rb\" ))\n",
+    "    elif genre == \"country\":\n",
+    "        generator = pickle.load( open( \"country.gen\", \"rb\" ))\n",
+    "    else:\n",
+    "        return \"\"\n",
+    "    \n",
+    "    while True:\n",
+    "        line = generator.generate(1, 'b', Generator.special + ignore, [])\n",
+    "        if len(line[0]) > 15:\n",
+    "            break\n",
+    "                                \n",
+    "    return line[0]\n",
+    "                                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'just talking loud \\n'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_lyrics(\"hiphop\")"
+   ]
   },
   {
    "cell_type": "code",
